--- a/.github/workflows/alive.yml
+++ b/.github/workflows/alive.yml
@@ -6,8 +6,15 @@ on:
 jobs:
   commit:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # 允许推送代码
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.PAT }}  # 使用 PAT 替代默认 GITHUB_TOKEN
+
       - name: Create empty commit
         run: |
           git config user.name "GitHub Actions"
