--- a/.github/workflows/keep-alive.yml
+++ b/.github/workflows/keep-alive.yml
@@ -2,12 +2,12 @@ name: Keep Alive Workflow
 
 on:
   schedule:
-    # 每天凌晨3点 (UTC时间) 运行一次
     # 你可以根据需要调整这个 cron 表达式
     # Cron 语法: 分 时 日 月 周
-    # 例如: '0 0 * * 0' 每周日午夜 (UTC)
-    # 例如: '0 0 1 * *' 每月1号午夜 (UTC)
-    - cron: '0 3 * * *'
+    # '0 0 * * 0' # 每周日午夜 (UTC)
+    # '0 0 1 * *' # 每月1号午夜 (UTC)
+    # '0 3 * * *' # 每天凌晨3点 (UTC时间) 运行一次
+    - cron: '0 0 * * 0' # 每周日午夜 (UTC)
   workflow_dispatch: # 允许手动触发此 workflow (方便测试)
 
 jobs:
